--- a/locales/en/index.yml
+++ b/locales/en/index.yml
@@ -2620,6 +2620,7 @@ bonus:
         conjunction: " and "
 features:
   messages:
+    attachments: "Attachments"
     loading:
       title: "Loading message details"
       subtitle: "Please wait"
