--- a/locales/it/index.yml
+++ b/locales/it/index.yml
@@ -2620,6 +2620,7 @@ bonus:
         conjunction: ", "
 features:
   messages:
+    attachments: "Allegati"
     loading:
       title: "Sto caricando i dettagli del messaggio"
       subtitle: "Attendi qualche secondo"
