chore: 🇩🇪 language adjustments (#5490)
adjustments as of PR
[765](https://github.com/pagopa/io-services-metadata/pull/765) in
[io-services-metadata](https://github.com/dhinterlechner/io-services-metadata)

---------

Co-authored-by: Alessandro Izzo <alessandro.izzo998@gmail.com>

--- a/locales/de/index.yml
+++ b/locales/de/index.yml
@@ -2290,7 +2290,7 @@ features:
         title: "Etwas ist schief gelaufen"
         body: "Die Details zu deiner Mitteilung konnten nicht abgerufen werden. Bitte versuche es erneut"
       cancelledMessage:
-        body: "Dieser Bescheid wurde vom Absender gelöscht. Du kannst dessen Inhalt ignorieren."
+        body: "Diese Zustellung wurde vom Absender gelöscht. Du kannst dessen Inhalt ignorieren."
         unpaidPayments: "Für die Erstattung von Zahlungen im Zusammenhang mit diesem Bescheid wende dich bitte an den Absender."
         payments: "Zahlungen"
       paymentSection:
@@ -2306,10 +2306,10 @@ features:
         bottomSheet:
           title: "Beiliegende F24-Formulare"
       infoSection:
-        title: "Informationen zum Bescheid"
+        title: "Informationen zur Zustellung"
         iun: "IUN-Code"
       timeline:
-        title: "STATUS DES BESCHEIDS"
+        title: "STATUS DER ZUSTELLUNG"
         status:
           DELIVERED: "Zugestellt"
           DELIVERING: "In Zustellung"
@@ -2331,7 +2331,7 @@ support:
   helpCenter:
     header: "Hilfe"
     cta:
-      contactSupport: "Erstelle ein Ticket"
+      contactSupport: "Ticket erstellen"
       seeReports: "Offene Tickets"
     supportComponent:
       title: "Benötigst du Hilfe?"
