--- a/locales/it/index.yml
+++ b/locales/it/index.yml
@@ -2628,6 +2628,8 @@ features:
     updateBottomSheet:
       title: "Aggiorna l'app IO"
       subtitle: "Per usare questa funzionalità è richiesta la versione {{value}} di app IO. Aggiorna l’app per continuare."
+    badge:
+      dueDate: Scaduto il {{date}} alle ore {{time}}
   euCovidCertificate:
     save:
       album: "IO"
