Accessibility label on <Contains Attachments>-icon in the new-DS Message Details Screen

--- a/locales/en/index.yml
+++ b/locales/en/index.yml
@@ -1879,6 +1879,7 @@ messages:
       success: "Successfully unarchived."
       failure: "Failed to unarchive"
 messageDetails:
+  accessibilityAttachmentIcon: "Includes attachments"
   contextualHelpTitle: Message details
   contextualHelpContent: !include messages/message_detail.md
   headerTitle: Message
