add logic for 60 seconds timeout and change texts

--- a/locales/en/index.yml
+++ b/locales/en/index.yml
@@ -823,7 +823,7 @@ email:
     title: Validate your email
     subtitle: Follow the instructions we sent to
     link: Is the email address wrong?
-    buttonlabelsent: Email sent!
+    countdowntext: request new email in 
     buttonlabelsentagain: Send email again
     toast: Done! Check your mailbox.
   newvalidemail:
