--- a/locales/it/index.yml
+++ b/locales/it/index.yml
@@ -823,7 +823,7 @@ email:
     title: Conferma la tua email
     subtitle: Segui le istruzioni che abbiamo inviato a
     link: Non è corretta?
-    buttonlabelsent: Email inviata!
+    countdowntext: Richiedi una nuova email tra
     buttonlabelsentagain: Invia di nuovo l’email
     toast: Fatto! Controlla tua casella di posta.
   newvalidemail:
