--- a/locales/de/index.yml
+++ b/locales/de/index.yml
@@ -785,6 +785,7 @@ email:
     title: "Bestätige deine E-Mail-Adresse"
     subtitle: "Folge den Anweisungen, die an folgende Adresse gesendet wurden:"
     link: "Ist sie nicht korrekt?"
+    buttonlabelsent: "E-Mail gesendet"
     buttonlabelsentagain: "E-Mail erneut senden"
     toast: "Erledigt! Prüf deinen Posteingang."
   newvalidemail:
