--- a/locales/it/index.yml
+++ b/locales/it/index.yml
@@ -823,7 +823,8 @@ email:
     title: Conferma la tua email
     subtitle: Segui le istruzioni che abbiamo inviato a
     link: Non è corretta?
-    countdowntext: Richiedi una nuova email tra
+    countdowntext: Richiedi una nuova email tra 
+    buttonlabelsent: Email inviata!
     buttonlabelsentagain: Invia di nuovo l’email
     toast: Fatto! Controlla tua casella di posta.
   newvalidemail:
