--- a/locales/en/index.yml
+++ b/locales/en/index.yml
@@ -1231,6 +1231,10 @@ wallet:
         title: Hai già aggiunto questo metodo
         subtitle: ""
         primaryAction: Chiudi
+      BPAY_NOT_FOUND:
+        title: Non abbiamo trovato alcun BANCOMAT Pay attivo
+        subtitle: "Contatta la tua Banca per attivare il servizio."
+        primaryAction: Chiudi
   alert:
     supportedCardPageLinkError: An error occurred while opening the supported cards page.
     msgErrorUpdateApp: "An error occurred while opening the app store"
