--- a/locales/en/index.yml
+++ b/locales/en/index.yml
@@ -2633,7 +2633,8 @@ features:
     badge:
       dueDate: Expired on {{date}} at {{time}}
     alert:
-      action: Add reminder
+      addReminder: Add reminder
+      removeReminder: Remove reminder
       content: Expires on {{date}} at {{time}}
   euCovidCertificate:
     save:
