chore: [IOBP-552,IOBP-556] Additional onboarding outcome screen for BPay (#5518)
## Short description
This PR adds the outcome screen to show when there is an outcome `16`
from the onboarding webview. In addition, the text from the success
onboarding screen feedback has been changed.

## List of changes proposed in this pull request
- Addedd additional outcome 16 as `BPAY_NOT_FOUND`
- Added locales and pictogram for the `BPAY_NOT_FOUND` outcome.

## How to test
- Checkout this PR from the io-dev-app-server:
https://github.com/pagopa/io-dev-api-server/pull/350
- Then, start an onboarding process from the playground and choose `16 -
BPAY_NOT_FOUND` from the dropdown list shown in the webview

## Preview


https://github.com/pagopa/io-app/assets/34343582/63622a3f-1332-4478-80ff-43e47d3dc1e5

--- a/locales/it/index.yml
+++ b/locales/it/index.yml
@@ -1203,7 +1203,7 @@ wallet:
             description: "Cercheremo tutte le carte intestate a te presso le banche aderenti al servizio"
     generalError: "C'è stato un errore generico durante l'aggiunta del metodo di pagamento"
     success:
-      title: "La carta è stata aggiunta!"
+      title: "Il metodo è stato aggiunto"
       continueButton: "Vedi dettagli"
     failure:
       GENERIC_ERROR:
@@ -1230,6 +1230,10 @@ wallet:
       ALREADY_ONBOARDED:
         title: Hai già aggiunto questo metodo
         subtitle: ""
+        primaryAction: Chiudi
+      BPAY_NOT_FOUND:
+        title: Non abbiamo trovato alcun BANCOMAT Pay attivo
+        subtitle: "Contatta la tua Banca per attivare il servizio."
         primaryAction: Chiudi
   alert:
     supportedCardPageLinkError: Si è verificato un errore durante l'apertura della pagina di riferimento per le carte supportate.
