feat: [IOCOM-851] Add calendar event for messages with `due_date` (#5524)
## Short description
This PR allows to manage calendars events for messages with a due date.

<details open><summary>Details</summary>
<p>

| calendars events |
| - |
| <video
src="https://github.com/pagopa/io-app/assets/29163287/f80b615d-8a88-4bc1-9aa2-8fb2f6b197cb"
width="300"/> |

</p>
</details> 

## List of changes proposed in this pull request
- `useMessageReminder.ts`: this custom hook allows to manage calendar
events.
- requires permission to access the calendar, and if permission is not
granted, it asks for it.
    - adds or removes an event from the calendar
    - navigates to the screen to choose the preferred calendar
- `useMessageCalendar.ts`: this custom hook allows to add, remove an
event from the calendar also allows to set the preferred calendar
- `MessageCalendarScreen.tsx`: displays the list of accessible calendars
- `MessageDetailsReminder.tsx`: displays `Alert` component

## How to test
Using `io-dev-api-server`, generate a message with valid due_date. Open
the message and add/remove a calendar event.

---------

Co-authored-by: Andrea <andrea.piai@pagopa.it>

--- a/locales/it/index.yml
+++ b/locales/it/index.yml
@@ -2641,7 +2641,8 @@ features:
     badge:
       dueDate: Scaduto il {{date}} alle ore {{time}}
     alert:
-      action: Aggiungi promemoria
+      addReminder: Aggiungi promemoria
+      removeReminder: Rimuovi promemoria
       content: Scade il {{date}} alle ore {{time}}
   euCovidCertificate:
     save:
