--- a/locales/it/index.yml
+++ b/locales/it/index.yml
@@ -1991,7 +1991,7 @@ services:
         label: "tutti i servizi che non hai disattivato possono contattarti."
         title: "Usa configurazione rapida"
         body:
-          text1: "Ti contatteranno solo gli enti che hanno qualcosa di importante da dirti. Potrai sempre disattivare le comunicazioni dei servizi che non ti interessano."
+          text1: "Ti contatteranno solo gli enti che hanno qualcosa di importante da dirti."
           text2: "Potrai sempre disattivare le comunicazioni dei servizi che non ti interessano."
       manualConfig:
         value: "Configurazione manuale"
