feat: [IOPID-1501] Adapt LandingScreen to the new DS (#5536)
## Short description
This PR addresses the redesign of the LandingScreen by adopting the new
DS.
It's been used as reference to write this [DS Getting Started
Document](https://pagopa.atlassian.net/wiki/spaces/IAEI/pages/944734806/DS+getting+started).

> [!TIP]
> Review Privacy ✅
>
> [![Run e2e
tests](https://github.com/pagopa/io-app/actions/workflows/test-e2e.yml/badge.svg?branch=IOPID-1501-landing-screen)](https://github.com/pagopa/io-app/actions/workflows/test-e2e.yml)

<details><summary>🎦 Demo 🎦</summary>
<p>

| Android a11y | iOS a11y | Session Expired | Session Expired LV |
| - | - | - | - | 
| <video
src="https://github.com/pagopa/io-app/assets/16268789/40853c09-3967-48e7-96bd-c6efe3007ad8"
/> | <video
src="https://github.com/pagopa/io-app/assets/16268789/61943639-59b8-4e36-a386-d69ece0aa1b8"
/> | <video
src="https://github.com/pagopa/io-app/assets/16268789/8e4826e8-5991-4d25-994f-c3965ef6c022"
/> | <video
src="https://github.com/pagopa/io-app/assets/16268789/3dd2b041-1e48-4cea-b6e8-06fdabb22f98"
/>

| Small Device Carousel & Legacy Jailbroken Device Modal | Android
Tablet and Legacy EIC not supported modal presentation | Legacy iOS EIC
Not Supported modal presentation |
| - | - | - | 
| <video
src="https://github.com/pagopa/io-app/assets/16268789/6cfb9af4-05c5-4a59-b213-a31ff9f2010c"
/> | <video
src="https://github.com/pagopa/io-app/assets/16268789/2ce3a03d-278e-43ee-a959-38841eda66d8"
/> | <video
src="https://github.com/pagopa/io-app/assets/16268789/d6f4988f-0c8a-4073-b0db-141d37e12c9e"
/> |

| EIC UAT |
| - |
| <video
src="https://github.com/pagopa/io-app/assets/16268789/cc688a12-2e54-46cc-9041-1a621c6d3852"
/> |

</p>
</details> 

## How to test
- Run on a device and test both FL and Standard Login session
expiration.
- Test a11y on both Android and iOS devices.
- Run the app on a jailbroken device and test the complementary
informative modal.

--- a/locales/en/index.yml
+++ b/locales/en/index.yml
@@ -558,7 +558,7 @@ authentication:
         hint: Carousel that contains an introduction guide to IO functionalities. Select to know the content.
     session_expired:
       title: Your session is expired
-      body: For security reasons, after {{days}} days from the last login with SPID or CIE, we ask you to sign in again to use IO.
+      body: Per ragioni di sicurezza, ti chiediamo di entrare con SPID o CIE ogni {{days}} giorni o se esci dall’app.
     cie_unsupported:
       title: Login with CIE unavailable
       body: !include cie/cieNotSupported.md
@@ -577,6 +577,7 @@ authentication:
     loginSpidCie: Login with SPID or CIE
     infoSpidCie: Introduction to SPID and CIE
     loginSpidCieContent: From today, in addition to SPID, you can use your Electronic ID Card to login
+    privacyLink: Informativa privacy
     nospid: Don't have SPID? Find out more
     nospid-nocie: Don't have SPID or CIE? Find out more
     card1-title: All messages in one place
@@ -584,11 +585,9 @@ authentication:
     card2-title: Use your favourite payment methods
     card2-content: You can pay a tax or a penalty by your bank account and your cards
     card3-title: Quickly pay a physical notice
-    card3-content: You can pay a notice also by scanning the QR code on the physical notice
-    card4-title: You can login only with SPID
-    card4-content: The device you are using does not support access with Electronic Identity Card (CIE)
+    card3-content: You can pay a notice also by scanning the QR code on the physical notice    
     card5-title: Welcome to the public version of IO!
-    card5-content: In this version you can find in the upper-right corner the icons to report bugs or start a chat with the development team. We're waiting for your feedback!
+    card5-content: Vediamo insieme cosa puoi fare
     card5-content-accessibility: Seleziona elemento precedente per aprire una chat con il team di IO se qualcosa non funziona come dovrebbe.
     expiredCardTitle: Card expired or no longer valid
     expiredCardHeaderTitle: Login with CIE
